force-app/main/default/objects/Product__c/fields/Actual_Date_Funded__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date_Funded__c</fullName>
    <description>The date this account was funded by Affirm</description>
    <inlineHelpText>The date this account was funded by Affirm</inlineHelpText>
    <label>Actual Date Funded</label>
    <type>Date</type>
</CustomField>