force-app/main/default/objects/Product__c/fields/Actual_Funded_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Funded_Amount__c</fullName>
    <description>The actual amount funded by Affirm on this account</description>
    <inlineHelpText>The actual amount funded by Affirm on this account</inlineHelpText>
    <label>Actual Funded Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>