force-app/main/default/objects/Product__c/fields/Actual_Term__c.field-meta.xml
<CustomField>
    <fullName>Actual_Term__c</fullName>
    <description>The term remaining on the loan, based on actual payment history</description>
    <inlineHelpText>The term remaining on the loan, based on actual payment history</inlineHelpText>
    <label>Remaining Actual Term</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>