force-app/main/default/objects/Product__c/fields/Address_Last_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Address_Last_Changed_Date__c</fullName>
    <description>The date the customer&apos;s address last changed in the system of record</description>
    <inlineHelpText>The date the customer&apos;s address last changed in the system of record</inlineHelpText>
    <label>Address Last Changed Date</label>
    <type>Date</type>
</CustomField>