force-app/main/default/objects/Product__c/fields/Address_Line1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line1__c</fullName>
    <description>The primary account holder&apos;s address line 1</description>
    <inlineHelpText>The primary account holder&apos;s address line 1</inlineHelpText>
    <label>Address Line1</label>
    <length>250</length>
    <type>Text</type>
</CustomField>