force-app/main/default/objects/Product__c/fields/Address_Line2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line2__c</fullName>
    <description>The primary account holder&apos;s address line 2</description>
    <inlineHelpText>The primary account holder&apos;s address line 2</inlineHelpText>
    <label>Address Line2</label>
    <length>250</length>
    <type>Text</type>
</CustomField>