force-app/main/default/objects/Product__c/fields/Annual_Fee_Additional_Cardholder__c.field-meta.xml
<CustomField>
    <fullName>Annual_Fee_Additional_Cardholder__c</fullName>
    <description>The annual fee charged on this account to additional cardholders, if applicable</description>
    <inlineHelpText>The annual fee charged on this account to additional cardholders, if applicable</inlineHelpText>
    <label>Annual Fee - Additional Cardholder</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>