force-app/main/default/objects/Product__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A link to the application that sourced this account</description>
    <inlineHelpText>A link to the application that sourced this account</inlineHelpText>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>