force-app/main/default/objects/Product__c/fields/Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Application_ID__c</fullName>
    <description>The Application ID that sourced this account</description>
    <inlineHelpText>The Application ID that sourced this account</inlineHelpText>
    <label>Application ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>