force-app/main/default/objects/Product__c/fields/Available_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Available_Credit_Amount__c</fullName>
    <description>The amount of credit currently available to the customer</description>
    <inlineHelpText>The amount of credit currently available to the customer</inlineHelpText>
    <label>Available Credit Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>