force-app/main/default/objects/Product__c/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <description>The name of the branch this account belongs to</description>
    <inlineHelpText>The name of the branch this account belongs to</inlineHelpText>
    <label>Branch Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>