force-app/main/default/objects/Product__c/fields/Branch_Number__c.field-meta.xml
<CustomField>
    <fullName>Branch_Number__c</fullName>
    <description>The branch number this account belongs to</description>
    <inlineHelpText>The branch number this account belongs to</inlineHelpText>
    <label>Branch Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>