force-app/main/default/objects/Product__c/fields/Card_Activated__c.field-meta.xml
<CustomField>
    <fullName>Card_Activated__c</fullName>
    <defaultValue>&quot;FALSE&quot;</defaultValue>
    <description>Whether the card on this account was activated by the customer, for credit card accounts</description>
    <inlineHelpText>Whether the card on this account was activated by the customer, for credit card accounts</inlineHelpText>
    <label>Card Activated</label>
    <length>30</length>
    <type>Text</type>
</CustomField>