force-app/main/default/objects/Product__c/fields/Charge_Off_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>Charge_Off_Code_Description__c</fullName>
    <description>The Charge off code description that this account was charged off for, if applicable</description>
    <formula>CASE( Charged_Off_Code__c , 
&apos;18&apos;, 
&apos;Deceased&apos;, 
&apos;02&apos;, 
&apos;Fraud&apos;, 
&apos;88&apos;, 
&apos;Fraud&apos;, 
&apos;89&apos;, 
&apos;Bankruptcy&apos;
,&apos;Aging&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Charge off code description that this account was charged off for, if applicable</inlineHelpText>
    <label>Charge Off Code Description</label>
    <type>Text</type>
</CustomField>