force-app/main/default/objects/Product__c/fields/Class_Number__c.field-meta.xml
<CustomField>
    <fullName>Class_Number__c</fullName>
    <description>The class this account belongs to</description>
    <inlineHelpText>The class this account belongs to</inlineHelpText>
    <label>Class</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>