force-app/main/default/objects/Product__c/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <description>The date this account was closed</description>
    <inlineHelpText>The date this account was closed</inlineHelpText>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>