force-app/main/default/objects/Product__c/fields/Collection_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Collection_Sub_Status__c</fullName>
    <description>A status for this account indicating customer&apos;s relevant circumstances for collection (deceased, bankrupt, etc)</description>
    <inlineHelpText>A status for this account indicating customer&apos;s relevant circumstances for collection (deceased, bankrupt, etc)</inlineHelpText>
    <label>Collection Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cease and Desist</fullName>
            </value>
            <value>
                <fullName>Consumer proposals</fullName>
            </value>
            <value>
                <fullName>Incarcerated</fullName>
            </value>
            <value>
                <fullName>Bankrupt</fullName>
            </value>
            <value>
                <fullName>Credit Counselling</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>