force-app/main/default/objects/Product__c/fields/Collections_Toolkit__c.field-meta.xml
<CustomField>
    <fullName>Collections_Toolkit__c</fullName>
    <description>Collection toolkit currently in use on this account</description>
    <inlineHelpText>Collection toolkit currently in use on this account</inlineHelpText>
    <label>Collections Toolkit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deferment</fullName>
            </value>
            <value>
                <fullName>RBO</fullName>
            </value>
            <value>
                <fullName>Re-age</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>Workout Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>