force-app/main/default/objects/Product__c/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <description>The max credit limit for this account</description>
    <inlineHelpText>The max credit limit for this account</inlineHelpText>
    <label>Credit Limit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>