force-app/main/default/objects/Product__c/fields/Credit_Limit_Last_Changed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Last_Changed_Amount__c</fullName>
    <description>The difference in limit from the last time the credit limit changed on this account</description>
    <inlineHelpText>The difference in limit from the last time the credit limit changed on this account</inlineHelpText>
    <label>Credit Limit Last Changed Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>