force-app/main/default/objects/Product__c/fields/CTD_Amount_Of_Payments_Made__c.field-meta.xml
<CustomField>
    <fullName>CTD_Amount_Of_Payments_Made__c</fullName>
    <description>The total amount of returns made this cycle</description>
    <inlineHelpText>The total amount of returns made this cycle</inlineHelpText>
    <label>CTD Amount Of Payments Made</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>