force-app/main/default/objects/Product__c/fields/CTD_Amount_Of_Returns_Made__c.field-meta.xml
<CustomField>
    <fullName>CTD_Amount_Of_Returns_Made__c</fullName>
    <description>The number of returns made this cycle</description>
    <inlineHelpText>The number of returns made this cycle</inlineHelpText>
    <label>CTD Amount Of Returns Made</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>