force-app/main/default/objects/Product__c/fields/CTD_Number_Of_Payments_Made__c.field-meta.xml
<CustomField>
    <fullName>CTD_Number_Of_Payments_Made__c</fullName>
    <description>The number of payments made this cycle</description>
    <inlineHelpText>The number of payments made this cycle</inlineHelpText>
    <label>CTD Number Of Payments Made</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>