force-app/main/default/objects/Product__c/fields/Current_Average_Daily_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Average_Daily_Balance__c</fullName>
    <description>The average daily balance of this account, for revolving accounts</description>
    <inlineHelpText>The average daily balance of this account, for revolving accounts</inlineHelpText>
    <label>Current Average Daily Balance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>