force-app/main/default/objects/Product__c/fields/Current_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Balance__c</fullName>
    <description>The current balance outstanding on this account</description>
    <inlineHelpText>The current balance outstanding on this account</inlineHelpText>
    <label>Current Balance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>