force-app/main/default/objects/Product__c/fields/Current_Balance_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Balance_Effective_Date__c</fullName>
    <description>The date that the current outstanding balance was last calculated</description>
    <inlineHelpText>The date that the current outstanding balance was last calculated</inlineHelpText>
    <label>Current Balance Effective Date</label>
    <type>Date</type>
</CustomField>