force-app/main/default/objects/Product__c/fields/Customer_Language__c.field-meta.xml
<CustomField>
    <fullName>Customer_Language__c</fullName>
    <description>Customer Language from corresponding Customer (Account) Record</description>
    <formula>TEXT(Customer__r.Language__pc)</formula>
    <inlineHelpText>Customer Language from corresponding Customer (Account) Record</inlineHelpText>
    <label>Customer Language</label>
    <type>Text</type>
</CustomField>