force-app/main/default/objects/Product__c/fields/DAQ_Score__c.field-meta.xml
<CustomField>
    <fullName>DAQ_Score__c</fullName>
    <description>The combination of willingness and ability</description>
    <inlineHelpText>The combination of willingness and ability</inlineHelpText>
    <label>DAQ Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - High Willingness, High Ability</fullName>
            </value>
            <value>
                <fullName>2 - High Willingness, Low Ability</fullName>
            </value>
            <value>
                <fullName>2 - High Willingness, Low Ability - Lawsuit Worthy</fullName>
            </value>
            <value>
                <fullName>3 - Low Willingness, High Ability</fullName>
            </value>
            <value>
                <fullName>3 - Low Willingness, High Ability - Lawsuit Worthy</fullName>
            </value>
            <value>
                <fullName>4 - Low Willingness, Low Ability</fullName>
            </value>
            <value>
                <fullName>4 - Low Willingness, Low Ability - Lawsuit Worthy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>