force-app/main/default/objects/Product__c/fields/Date_of_First_Activity__c.field-meta.xml
<CustomField>
    <fullName>Date_of_First_Activity__c</fullName>
    <description>The date the account was first used by the customer</description>
    <inlineHelpText>The date the account was first used by the customer</inlineHelpText>
    <label>Date of First Activity</label>
    <type>Date</type>
</CustomField>