force-app/main/default/objects/Product__c/fields/Delinquency_Cycles__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Cycles__c</fullName>
    <description>The number of cycles this account is delinquent</description>
    <inlineHelpText>The number of cycles this account is delinquent</inlineHelpText>
    <label>Number of Cycles Delinquent</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>