force-app/main/default/objects/Product__c/fields/Delinquency_Days__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Days__c</fullName>
    <description>The number of days past due this account is, if applicable</description>
    <inlineHelpText>The number of days past due this account is, if applicable</inlineHelpText>
    <label>Number of Days Delinquent</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>