force-app/main/default/objects/Product__c/fields/Delinquency_ID__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_ID__c</fullName>
    <description>DebtNext-specific</description>
    <inlineHelpText>DebtNext-specific</inlineHelpText>
    <label>Delinquency ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>