force-app/main/default/objects/Product__c/fields/Delinquency_Last_Pmt_Days__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Last_Pmt_Days__c</fullName>
    <description>The number of days since the last payment was made on this account, if applicable</description>
    <inlineHelpText>The number of days since the last payment was made on this account, if applicable</inlineHelpText>
    <label>Number of Days Since Last Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>