force-app/main/default/objects/Product__c/fields/Delinquency_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Status_Formula__c</fullName>
    <description>True if this account is currently delinquent (missed it&apos;s next payment date), false if it is current</description>
    <formula>IF(Payment_Due_Date__c &lt; Today(), True, False)</formula>
    <inlineHelpText>True if this account is currently delinquent (missed it&apos;s next payment date), false if it is current</inlineHelpText>
    <label>Is Delinquent</label>
    <type>Checkbox</type>
</CustomField>