force-app/main/default/objects/Product__c/fields/Disbursement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Amount__c</fullName>
    <description>The actual amount disbursed to the customer on this account</description>
    <inlineHelpText>The actual amount disbursed to the customer on this account</inlineHelpText>
    <label>Disbursement Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>