force-app/main/default/objects/Product__c/fields/Effective_Next_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Effective_Next_Payment_Amount__c</fullName>
    <formula>IF( AND(Override_Payment_Amount__c != 0, NOT(ISNULL(Override_Payment_Amount__c))), Override_Payment_Amount__c, 
IF(First_Payment_Date__c == Payment_Due_Date__c, First_Payment_Amount__c, Payment_Amount__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Next Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>