force-app/main/default/objects/Product__c/fields/Effective_Next_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Next_Payment_Date__c</fullName>
    <description>The date that Salesforce will take the next payment on this account.</description>
    <formula>IF( AND(NOT(ISBLANK(Override_Payment_Date__c)), NOT(ISNULL(Override_Payment_Date__c))), Override_Payment_Date__c, 
IF(First_Payment_Date__c == Payment_Due_Date__c, First_Payment_Date__c, Payment_Due_Date__c))</formula>
    <inlineHelpText>The date that Salesforce will take the next payment on this account.</inlineHelpText>
    <label>Effective Next Payment Date</label>
    <type>Date</type>
</CustomField>