force-app/main/default/objects/Product__c/fields/External_Status_Current__c.field-meta.xml
<CustomField>
    <fullName>External_Status_Current__c</fullName>
    <description>FDR:  The External Status of this account
Megasys: The AdminStatus of the loan account</description>
    <inlineHelpText>FDR:  The External Status of this account
Megasys: The AdminStatus of the loan account</inlineHelpText>
    <label>External Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>