force-app/main/default/objects/Product__c/fields/External_Status_Description__c.field-meta.xml
<CustomField>
    <fullName>External_Status_Description__c</fullName>
    <description>A description of the External Status code value</description>
    <formula>CASE( External_Status_Current__c, &apos;A&apos;, &apos;Authorization Prohibited&apos;,
&apos;B&apos;, &apos;Bankrupt&apos;,
&apos;C&apos;, &apos;Closed&apos;,
&apos;E&apos;, &apos;Revoked&apos;,
&apos;F&apos;, &apos;Frozen&apos;,
&apos;I&apos;, &apos;Interest Accrual Prohibited&apos;,
&apos;L&apos;, &apos;Lost&apos;,
&apos;U&apos;, &apos;Stolen&apos;,
&apos;Z&apos;, &apos;Charged Off&apos;,
&apos;Normal Status&apos;)</formula>
    <inlineHelpText>A description of the External Status code value</inlineHelpText>
    <label>External Status Description</label>
    <type>Text</type>
</CustomField>