force-app/main/default/objects/Product__c/fields/External_Status_Previous__c.field-meta.xml
<CustomField>
    <fullName>External_Status_Previous__c</fullName>
    <description>The previous external status the account was in before its current external status was set, if applicable</description>
    <inlineHelpText>The previous external status the account was in before its current external status was set, if applicable</inlineHelpText>
    <label>Previous External Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>