force-app/main/default/objects/Product__c/fields/Extinguished_Date__c.field-meta.xml
<CustomField>
    <fullName>Extinguished_Date__c</fullName>
    <description>DebtNext-specific</description>
    <inlineHelpText>DebtNext-specific</inlineHelpText>
    <label>Extinguished Date</label>
    <type>Date</type>
</CustomField>