force-app/main/default/objects/Product__c/fields/Final_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Payment_Amount__c</fullName>
    <description>The amount that the customer is required to pay as the final payment on this account</description>
    <inlineHelpText>The amount that the customer is required to pay as the final payment on this account</inlineHelpText>
    <label>Final Payment Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>