force-app/main/default/objects/Product__c/fields/Final_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Payment_Date__c</fullName>
    <description>The date that the final payment is due for this account</description>
    <inlineHelpText>The date that the final payment is due for this account</inlineHelpText>
    <label>Final Payment Date</label>
    <type>Date</type>
</CustomField>