force-app/main/default/objects/Product__c/fields/First_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Amount__c</fullName>
    <description>The amount that the customer was required to pay as the first payment on this account</description>
    <inlineHelpText>The amount that the customer was required to pay as the first payment on this account</inlineHelpText>
    <label>First Payment Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>