force-app/main/default/objects/Product__c/fields/First_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Date__c</fullName>
    <description>The date that the first payment was due for this account</description>
    <inlineHelpText>The date that the first payment was due for this account</inlineHelpText>
    <label>First Payment Date</label>
    <type>Date</type>
</CustomField>