force-app/main/default/objects/Product__c/fields/Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Funding_Amount__c</fullName>
    <description>The requested amount to be funded on this account</description>
    <inlineHelpText>The requested amount to be funded on this account</inlineHelpText>
    <label>Requested Funding Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>