force-app/main/default/objects/Product__c/fields/Funding_Batch__c.field-meta.xml
<CustomField>
    <fullName>Funding_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The batch name that this account was funded through</description>
    <inlineHelpText>The batch name that this account was funded through</inlineHelpText>
    <label>Funding Batch</label>
    <referenceTo>Funding_Batch__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>