force-app/main/default/objects/Product__c/fields/Funding_Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Funding_Batch_Number__c</fullName>
    <description>The batch number that this account was funded through</description>
    <formula>HYPERLINK(&quot;https://cs4.salesforce.com/&quot;+Funding_Batch__r.Id, Funding_Batch__r.Funding_Batch_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The batch number that this account was funded through</inlineHelpText>
    <label>Funding Batch Number</label>
    <type>Text</type>
</CustomField>