force-app/main/default/objects/Product__c/fields/Funding_Posted_To_VersaPay_On__c.field-meta.xml
<CustomField>
    <fullName>Funding_Posted_To_VersaPay_On__c</fullName>
    <label>Funding Posted To Payment System On</label>
    <type>DateTime</type>
</CustomField>